--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: main
   <div class="container">
     {% for post in paginator.posts offset:1 %}
     <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-      <div class="image" style="background-image: url('/assets/images/logo-default.jpg');"></div>
+      <div class="image" style="background-image: url('/assets/images/logo-default.jp2');"></div>
       <div class="text">
         <h3 class="font-weight-light"><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
         <div class="text-white mb-3"><span
