--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 layout: main
 ---
 {% for post in site.posts limit:1 %}
-<div class="site-blocks-cover overlay" style="background-image: url(/assets/images/cover-default.jpg);" data-aos="fade"
+<div class="site-blocks-cover overlay" style="background-image: url(/assets/images/cover-default.jpg);"
   data-stellar-background-ratio="0.5">
   <div class="container">
     <div class="row align-items-center justify-content-center text-center">
-      <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
+      <div class="col-md-8">
         <h2 class="text-white font-weight-light mb-2 display-4">
           {{post.title}}
         </h2>
         <div class="text-white mb-4"><span
             class="text-white-opacity-05"><small>{{post.date | date: '%Y, %b %d'}}</small></span></div>
-        <p><a href="{{post.url | prepend: site.baseurl}}" class="btn btn-primary btn-sm py-3 px-4 small">Materiały do odcinka</a></p>
-        <a class="spreaker-player" href="https://www.spreaker.com/episode/{{ post.spreaker }}" data-resource="episode_id={{ post.spreaker }}"
-          data-width="100%" data-height="150px" data-theme="light" data-playlist="false"
-          data-playlist-continuous="false" data-autoplay="false" data-live-autoplay="false" data-chapters-image="true"
-          data-episode-image-position="right" data-hide-logo="true" data-hide-likes="false" data-hide-comments="false"
-          data-hide-sharing="false" data-hide-download="true">Posłuchaj <b>"{{post.title}}"</b> na Spreaker</a>
+        <p><a href="{{post.url | prepend: site.baseurl}}" class="btn btn-primary btn-sm py-3 px-4 small">Materiały do
+            odcinka</a></p>
+        <a class="spreaker-player" href="https://www.spreaker.com/episode/{{ post.spreaker }}"
+          data-resource="episode_id={{ post.spreaker }}" data-width="100%" data-height="150px" data-theme="light"
+          data-playlist="false" data-playlist-continuous="false" data-autoplay="false" data-live-autoplay="false"
+          data-chapters-image="true" data-episode-image-position="right" data-hide-logo="true" data-hide-likes="false"
+          data-hide-comments="false" data-hide-sharing="false" data-hide-download="true">Posłuchaj
+          <b>"{{post.title}}"</b> na Spreaker</a>
       </div>
     </div>
   </div>
