anchor dla paginatora

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: main
   </div>
 </div>
 {% endfor %}
-<div class="site-section bg-light">
+<div class="site-section bg-light" id="content">
   <div class="container">
     {% for post in paginator.posts %}
     {% for post_c in site.posts limit:1 %}
