--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@ layout: main
             class="text-white-opacity-05"><small>{{post.date | date: '%Y, %b %d'}}</small></span></div>
         <p><a href="{{post.url | prepend: site.baseurl}}" class="btn btn-primary btn-sm py-3 px-4 small">Materiały do
             odcinka</a></p>
+        {% if post.apple %}
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175"
+                style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+                sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+                src="https://embed.podcasts.apple.com/pl/podcast/{{ post.apple }}&l=pl"></iframe>
+        {% elsif post.spreaker %}
         <a class="spreaker-player" href="https://www.spreaker.com/episode/{{ post.spreaker }}"
           data-resource="episode_id={{ post.spreaker }}" data-width="100%" data-height="150px" data-theme="light"
           data-playlist="false" data-playlist-continuous="false" data-autoplay="false" data-live-autoplay="false"
           data-chapters-image="true" data-episode-image-position="right" data-hide-logo="true" data-hide-likes="false"
           data-hide-comments="false" data-hide-sharing="false" data-hide-download="true">Posłuchaj
           <b>"{{post.title}}"</b> na Spreaker</a>
+        {% endif %}
       </div>
     </div>
   </div>
